Add automated unit tests and supporting rule support